# Solana-RPC-Performance-Monitor

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: config.rs  main.rs  metrics.rs  models.rs  rpc.rs
src/static/: darkMode.js  dashboard.js  index.html  styles.css
