[package]
name = "practice"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.13"
solana-program = "2.1.13"
solana-sdk = "2.1.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
futures-util = "0.3"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.21.0"
serde_json = "1.0"
chrono = "0.4"
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
clap = { version = "4", features = ["derive"] }