[package]
name = "practice"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.13"
solana-program = "2.1.13"
solana-sdk = "2.1.13"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
futures = "0.3"
futures-util = "0.3"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.21.0"
serde_json = "1.0"
chrono = "0.4"
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
clap = { version = "4", features = ["derive"] }

# Force rustls instead of OpenSSL for better HTTP/2 support
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
